<resources>
    <string name="app_name">APProject</string>
    <string name="welcome">Welcome, lets play!</string>
    <string name="button">Button</string>

    <!--Login Activity Strings-->
    <string name="login">Login</string>
    <string name="signup">Sign-Up</string>
    <string name="sport_tracker">Sport Event Tracker</string>



    <!--About Activity Strings-->
    <string name="about">About</string>
    <string name="sports_app">Sports App</string>
    <string name="quit">Quit</string>
    <string name="sports_fun">Sports are Fun</string>
    <string name="join_play">Join and Play</string>
    <string name="join_play_enjoy">Join. Play. Enjoy.</string>
    <string name="meet_friends">Meet New Friends</string>
    <string name="created_by">App Created By:</string>
    <string name="blake">Blake Crozier</string>
    <string name="david">David Roach</string>

    <!--Activity Main Menu Strings-->
    <string name="main_menu">Main Menu</string>
    <string name="create_event">Create an Event</string>
    <string name="view_event">Events</string>
    <string name="join_event">Join an Event</string>

    <!--Schedule Strings-->
    <string name="schedule">Schedule</string>

    <!--Create Event Strings-->
    <string name="name_string">Your Name</string>
    <string name="enter_sport">Enter Sport</string>
    <string name="enter_location">Enter Location</string>
    <string name="set_location">Set Location</string>
    <string name="date_string"> Date</string>
    <string name="submit">Submit</string>
    <string name="pick_time">Pick a Time</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="time">Time</string>
    <string name="click_for_time">Click to Select Time</string>
    <string name="click_for_date">Click to Select Date</string>
    <string name="current_user">Current User</string>
    <string name="event_name">Event Name</string>

    <!--Spinner Strings-->
        <string-array name="sports_array">
            <item>Basketball</item>
            <item>Golf</item>
            <item>Football</item>
            <item>Soccer</item>
            <item>Frisbe</item>
        </string-array>

    <!--SignUp Strings-->
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="Cancel">Cancel</string>

    <!--ListItem Strings-->
    <string name="test_event">Test Event</string>
    <string name="test_date">12/12/2018</string>
    <string name="test_time">7:00 AM</string>


</resources>
