<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textSize="36sp" />



        <EditText
            android:id="@+id/signup_first_name_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name"

            android:inputType="textPersonName"/>



        <EditText
            android:id="@+id/signup_last_name_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/last_name" />



        <EditText
            android:id="@+id/signup_username_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
          />


        <EditText
            android:id="@+id/signup_password_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/password"
            android:inputType="textPassword"
           />




        <EditText
            android:id="@+id/signup_email_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/email"
            android:inputType="textEmailAddress"
         />


    <Button
        android:id="@+id/sign_up_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@color/darkred"
        android:text="@string/submit" />

    <Button
        android:text="@string/main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/main_menu_button"
        android:background="@color/darkred"
         />



</LinearLayout>

