<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paleton_tiel">

    <TextView
        android:text="@string/create_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_event_view"
        android:textSize="36sp"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:text="@string/current_user"
            android:textSize="20sp"
            android:id="@+id/username_TV"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <EditText
            android:id="@+id/event_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dip"
            android:hint="@string/event_name"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginBottom="25dip"
            android:id="@+id/location_spinner"
            />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginBottom="15dip"
            android:id="@+id/sport_spinner"
             />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/click_for_date"
            android:padding="15dp"
            android:focusable="false"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/paleton_purp_light"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/click_for_time"
            android:padding="15dp"
            android:focusable="false"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/paleton_purp_light"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/submit_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cancel"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/main_menu_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_menu"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>

