<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/join_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_event_view"
            android:textSize="36sp"
            android:textAlignment="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/first_name"
                android:id="@+id/join_first_name_ET" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/join_first_name_TV"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:ems="10"
                android:id="@+id/join_last_name_ET" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/join_last_name_TV" />


        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:ems="10"
                android:id="@+id/join_username_ET" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/join_username_TV" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:ems="10"
                android:id="@+id/join_password_ET"
                android:inputType="textPassword"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/join_password_TV" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:ems="10"
                android:id="@+id/join_email_ET"
                android:inputType="textEmailAddress"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/join_email_TV" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enter_join_event_button"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@color/darkred"
            android:text="@string/submit" />

        <Button
            android:text="@string/main_menu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:id="@+id/main_menu_button"
            android:background="@color/darkred"
            android:layout_weight="1" />

  <!--      <android.support.design.widget.BottomNavigationView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="start"
            app:menu="@menu/bottom_menu" />-->

    </LinearLayout>

    </ScrollView>