<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/darkorange"
    tools:context="com.davidroach.approject.MainMenuActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/black" />

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">




    <Button
        android:text="@string/view_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/view_schedule_button"
        android:background="@color/purple"
        android:layout_weight="1"/>

    <Button
        android:text="@string/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/about_button"
        android:background="@color/purple"
        android:layout_weight="1"/>

    <Button
        android:text="@string/quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/quit_button"
        android:background="@color/purple"
        android:layout_weight="1"/>

</LinearLayout>

</LinearLayout>
