<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beetred"
    >

    <!--Top row of image balls {Images are  Created by Photoroyalty - Freepik.com } -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7">

        <ImageView
            android:id="@+id/pic1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/goal" />

        <ImageView
            android:id="@+id/pic2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sport_bball" />

        <ImageView
            android:id="@+id/pic3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sport_cycle" />

        <ImageView
            android:id="@+id/pic4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sport_football" />

        <ImageView
            android:id="@+id/pic5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sport_hocky" />

        <ImageView
            android:id="@+id/pic6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sport_shoe" />

        <ImageView
            android:id="@+id/pic7"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sport_soccerball" />

    </LinearLayout>


    <!--Text View Title -->
    <TextView
        android:id="@+id/title_about_act"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/aqua"
        android:text="@string/sports_app"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="36sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:id="@+id/pic15"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:cropToPadding="false"
            app:srcCompat="@drawable/sport_bball" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2.01"
            android:paddingTop="10dp"
            android:text="@string/sports_fun"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/pic16"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sport_soccerball" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:id="@+id/pic17"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:cropToPadding="false"
            app:srcCompat="@drawable/sport_soccerball" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2.01"
            android:paddingTop="10dp"
            android:text="@string/join_play"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/pic18"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sport_bball" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:id="@+id/pic19"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:cropToPadding="false"
            app:srcCompat="@drawable/sport_bball" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2.01"
            android:paddingTop="10dp"
            android:text="@string/meet_friends"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/pic20"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sport_soccerball" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:id="@+id/pic21"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:cropToPadding="false"
            app:srcCompat="@drawable/sport_soccerball" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2.01"
            android:paddingTop="10dp"
            android:text="@string/created_by"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/pic22"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sport_bball" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:id="@+id/pic23"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:cropToPadding="false"
            app:srcCompat="@drawable/sport_bball" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2.01"
            android:paddingTop="10dp"
            android:text="@string/blake"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/pic24"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sport_soccerball" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:id="@+id/pic25"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:cropToPadding="false"
            app:srcCompat="@drawable/sport_soccerball" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2.01"
            android:paddingTop="10dp"
            android:text="@string/david"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/pic26"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sport_bball" />


    </LinearLayout>

    <!--Bottom row of image balls -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7">

        <ImageView
            android:id="@+id/pic8"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/goal" />

        <ImageView
            android:id="@+id/pic9"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sport_bball" />

        <ImageView
            android:id="@+id/pic10"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sport_cycle" />

        <ImageView
            android:id="@+id/pic11"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sport_football" />

        <ImageView
            android:id="@+id/pic12"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sport_hocky" />

        <ImageView
            android:id="@+id/pic13"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sport_shoe" />

        <ImageView
            android:id="@+id/pic14"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sport_soccerball" />

    </LinearLayout>


</LinearLayout>
